@@ -2827,7 +2827,8 @@ conversions.append (((2, 9, 11), conv, """\\set tupletNumberFormatFunction -> \\
 def conv (str):
     str = re.sub ('vocNam', 'shortVocalName', str)
     str = re.sub (r'([^a-z])instr\s*=', r'\1shortInstrumentName =', str)
+    str = re.sub (r'([^a-z])instrument\s*=', r'\1instrumentName =', str)
     return str
 
-conversions.append (((2, 9, 13), conv, """instr -> shortInstrumentName, vocNam -> shortVocalName"""))
+conversions.append (((2, 9, 13), conv, """instrument -> instrumentName, instr -> shortInstrumentName, vocNam -> shortVocalName"""))
 
