@@ -1,5 +1,9 @@
 2006-07-26  Han-Wen Nienhuys  <hanwen@lilypond.org>
 
+	* lily/instrument-name-engraver.cc (start_spanner): new
+	function. Create spanner when property changes.
+	(stop_spanner): new function.
+
 	* python/convertrules.py (conv): add rule.
 
 	* lily/instrument-name-engraver.cc: shortVocalName iso. vocNam,
